--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,4 +1,10 @@
 @import "variables";
 @import "mixins";
+@import "animations";
+
 @import "globals";
 @import "headers";
+@import "hero";
+@import "feature";
+@import "article";
+@import "footer";
